# epicoracle-feedback-substrate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml  test.yml
_briefs/: wB-observability-substrate.md
scripts/: replay-feedback-inbox.py  setup-branch-protection.sh
scripts/agent-dispatch/: _llm_helpers.py  _skip_helper.py  answer_draft.py  dispatch.py  fix_pr.py  path_guard.py  requirements.txt  sandbox_repro.py  setup.sh  triage.py  trinity_dispatch.py
src/epicoracle_feedback/: __init__.py  access_log_store.py  admin_router.py  auth.py  credentials.py  dispatch.py  events.py  http_events.py  http_middleware.py  idempotency.py  payload.py
src/epicoracle_feedback/schemas/: __init__.py  observability.py
templates/: CODEOWNERS  agent-dispatch.yml  build-ghcr-image.yml
tests/: conftest.py  test_access_log_store.py  test_admin_router.py  test_answer_draft.py  test_auth.py  test_credentials.py  test_dispatch.py  test_fix_pr.py  test_http_events.py  test_http_middleware.py  test_idempotency.py  test_llm_helpers.py  test_observability_schemas.py  test_path_guard.py  test_triage.py  test_trinity_dispatch.py
