[project]
name = "epicoracle-feedback"
version = "0.2.0a1"
description = "Shared operator-feedback substrate for the EpicOracle Family — fail-soft GitHub Issues dispatcher + agent-dispatch scripts + workflow templates."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Christian Donovan", email = "cdonovan@abtex.com" }]
keywords = ["feedback", "dispatcher", "github", "epicoracle"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: Other/Proprietary License",
  "Private :: Do Not Upload",
]
dependencies = [
  "pydantic>=2.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Repository = "https://github.com/cdonovan-abtex/epicoracle-feedback-substrate"
Issues = "https://github.com/cdonovan-abtex/epicoracle-feedback-substrate/issues"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicoracle_feedback"]

[tool.hatch.build.targets.sdist]
include = [
  "src/epicoracle_feedback",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET", "PL"]
ignore = [
  "PLR0913",  # too many args — dispatch_feedback takes keyword-only by design
  "PLR2004",  # magic value — clearer than naming three constants for tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
"scripts/**" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
